Reorganized project, added new algorithms and functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.13)
 project(AlgorithmsCPP)
 
 set(CMAKE_CXX_STANDARD 17)
 
-set(SOURCE_FILES main.cpp Logic.cpp)
+set(SOURCE_FILES main.cpp numeric/Numeric.cpp test/McCluskeyTest.cpp test/McCluskeyTest.h logic/Implicant.cpp logic/Implicant.h logic/McCluskey.cpp logic/McCluskey.h numeric/NumericGeneral.cpp numeric/NumericGeneral.h symbols.h logic/symbols.h programs/McCluskeyProg.h programs/McCluskeyProg.cpp)
 add_executable(AlgorithmsCPP ${SOURCE_FILES})
